syntax ="proto3";
option go_package ="../order";
package order;
service Order{
    rpc Create(CreateOrderRequest) returns (CreateOrderResponse);
}
message CreateOrderRequest{
    string cart_uuid = 1;
    string customer_name = 2;
    string phone = 3;
    string address = 4;
    repeated CreateOrderItemRequest order_item =5;
message CreateOrderItemRequest{
        string order_item_uid = 1;            
        string product_uuid = 2;
        string product_name =3;
        double product_price = 4;
        int64 quantity =5;
        double product_total = 6;
      }
}
message CreateOrderResponse {  
	string order_uuid = 1;
  }